[package]
name = "xibt"
version = "0.1.0"
authors = ["Sam Collard <gitlab@swifteagle.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
failure = "0.1.7"
exitfailure = "0.5.1"
sxd-document = "0.3.2"
sxd-xpath = "0.4.2"
rand = "0.7"